--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pcan-basic-sys = "2.0.0"
+pcan-basic-sys = {git = "https://github.com/TuEmb/pcan-basic-rs.git", branch="master"}
 
 #[package.metadata.docs.rs]
 #default-target = "x86_64-pc-windows-msvc"
